# virtuales

./: pyproject.toml  requirements.txt
.github/workflows/: send_alert_email.yml  test.yml
itec2025/: db.sqlite3
itec2025/analytics/: urls.py  views.py
itec2025/analytics/management/commands/: seed_analytics.py
itec2025/analytics/repositories/: orders_repository.py
itec2025/analytics/services/: dashboard_service.py
itec2025/analytics/templates/analytics/: dashboard.html
itec2025/api/: mixins.py  permissions.py  serializers.py  urls.py  views.py
itec2025/api/tests/: test_user.py
itec2025/itec2025/: settings.py  urls.py
itec2025/utils/scraper/: book_scraping.py
