[project]
name = "virtuales"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "beautifulsoup4>=4.13.5",
    "certifi==2025.8.3",
    "decorator==5.2.1",
    "Django==5.1.7",
    "django-filter==25.1",
    "django-simple-history==3.8.0",
    "djangorestframework==3.16.1",
    "dotenv-python==0.0.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "iniconfig==2.1.0",
    "ipdb==0.13.13",
    "ipython==8.34.0",
    "jedi==0.19.2",
    "Markdown==3.8.2",
    "matplotlib-inline==0.1.7",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "pluggy==1.6.0",
    "prompt_toolkit==3.0.50",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "Pygments==2.19.1",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests>=2.32.5",
    "sentry-sdk==2.34.1",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "tomli==2.2.1",
    "traitlets==5.14.3",
    "typing_extensions==4.13.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
]
